src/renderer/components/OptimizeTable/styles.module.css
.tableContainer {
  width: 100%;
  height: 100%;
  overflow: auto;
  position: relative;
}

.tableContainer table {
  position: absolute;
  display: grid;
  border-collapse: collapse;
  left: 0;
  top: 0;
  box-sizing: border-box;
  table-layout: fixed;
}

.tableContainer tr,
.tableContainer thead,
.tableContainer tbody {
  display: contents;
}

.tableContainer td,
.tableContainer th {
  border-bottom: 1px solid var(--color-table-grid);
  border-right: 1px solid var(--color-table-grid);
  overflow: hidden;
}

.tableCellContent {
  overflow: hidden;
  white-space: nowrap;
}

.tableContainer th {
  position: sticky;
  top: 0;
  background: #fff;
  user-select: none;
  padding: 0px 10px;
  height: 35px;
  line-height: 35px;
}

.resizer {
  position: absolute;
  right: 0;
  top: 0;
  bottom: 0;
  width: 3px;
  cursor: col-resize;
  background: #800;
  opacity: 0;
}

.resizer:hover {
  opacity: 0.5;
}

